--- a/index.html
+++ b/index.html
@@ -87,9 +87,10 @@
     <a class="link" href="https://www.tiktok.com/@abdelazimgad2005?_t=ZS-8wnbYTQp7hY&_r=1" target="_blank">
       <img src="https://cdn-icons-png.flaticon.com/512/3046/3046121.png" alt="TikTok">TikTok
     </a>
-    <a class="link" href="https://www.threads.net/@_eng_abdelazim_gad_" target="_blank">
-      <img src="https://cdn-icons-png.flaticon.com/512/5968/5968956.png" alt="Threads">Threads
-    </a>
+   <a class="link" href="https://www.threads.net/@_eng_abdelazim_gad_" target="_blank">
+  <img src="https://upload.wikimedia.org/wikipedia/commons/9/98/Threads_%28app%29_logo.svg" alt="Threads" style="width: 20px; height: 20px;">Threads
+</a>
+
     <a class="link" href="https://www.instagram.com/_eng_abdelazim_gad_?igsh=cDFscHNlNzJqa3Zm" target="_blank">
       <img src="https://cdn-icons-png.flaticon.com/512/174/174855.png" alt="Instagram">Instagram
     </a>
