--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Abdelazim Gad | Links</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <style>
     * {
       box-sizing: border-box;
@@ -57,6 +57,7 @@
     .link {
       display: flex;
       align-items: center;
+      justify-content: center;
       gap: 10px;
       background-color: #3498db;
       color: white;
@@ -65,16 +66,10 @@
       margin: 10px 0;
       border-radius: 10px;
       transition: background 0.3s;
-      justify-content: center;
     }
 
     .link:hover {
       background-color: #2c80b4;
-    }
-
-    .link img {
-      width: 20px;
-      height: 20px;
     }
   </style>
 </head>
@@ -84,28 +79,18 @@
     <h1>Abdelazim Gad</h1>
     <p>Mechatronics Student | Robotics & Tech Enthusiast</p>
 
-    <a class="link" href="https://www.tiktok.com/@abdelazimgad2005?_t=ZS-8wnbYTQp7hY&_r=1" target="_blank">
-      <img src="https://cdn-icons-png.flaticon.com/512/3046/3046121.png" alt="TikTok">TikTok
+    <a class="link" href="https://www.tiktok.com/@abdelazimgad2005?_t=ZS-8wnbYTQp7hY&_r=1" target="_blank"><i class="fab fa-tiktok"></i> TikTok</a>
+    
+    <a class="link" href="https://www.threads.net/@_eng_abdelazim_gad_" target="_blank">
+      <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/threads.svg" alt="Threads" style="width: 20px; height: 20px; margin-right: 8px; vertical-align: middle;">
+      Threads
     </a>
-   <a class="link" href="https://www.threads.net/@_eng_abdelazim_gad_" target="_blank">
-  <img src="https://upload.wikimedia.org/wikipedia/commons/9/98/Threads_%28app%29_logo.svg" alt="Threads" style="width: 20px; height: 20px;">Threads
-</a>
-
-    <a class="link" href="https://www.instagram.com/_eng_abdelazim_gad_?igsh=cDFscHNlNzJqa3Zm" target="_blank">
-      <img src="https://cdn-icons-png.flaticon.com/512/174/174855.png" alt="Instagram">Instagram
-    </a>
-    <a class="link" href="https://www.facebook.com/share/1Ad3NZtJ81/" target="_blank">
-      <img src="https://cdn-icons-png.flaticon.com/512/733/733547.png" alt="Facebook">Facebook
-    </a>
-    <a class="link" href="https://wa.me/201061208027" target="_blank">
-      <img src="https://cdn-icons-png.flaticon.com/512/220/220236.png" alt="WhatsApp">WhatsApp 1
-    </a>
-    <a class="link" href="https://wa.me/201018337012" target="_blank">
-      <img src="https://cdn-icons-png.flaticon.com/512/220/220236.png" alt="WhatsApp">WhatsApp 2
-    </a>
-    <a class="link" href="tel:01018337012" target="_blank">
-      <img src="https://cdn-icons-png.flaticon.com/512/597/597177.png" alt="Phone">Phone
-    </a>
+    
+    <a class="link" href="https://www.instagram.com/_eng_abdelazim_gad_?igsh=cDFscHNlNzJqa3Zm" target="_blank"><i class="fab fa-instagram"></i> Instagram</a>
+    <a class="link" href="https://www.facebook.com/share/1Ad3NZtJ81/" target="_blank"><i class="fab fa-facebook"></i> Facebook</a>
+    <a class="link" href="https://wa.me/201061208027" target="_blank"><i class="fab fa-whatsapp"></i> WhatsApp 1</a>
+    <a class="link" href="https://wa.me/201018337012" target="_blank"><i class="fab fa-whatsapp"></i> WhatsApp 2</a>
+    <a class="link" href="tel:01018337012" target="_blank"><i class="fas fa-phone"></i> Phone</a>
   </div>
 </body>
 </html>
