--- a/index.html
+++ b/index.html
@@ -1,96 +1,102 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Abdelazim Gad | Links</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-  <style>
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-      font-family: 'Inter', sans-serif;
-    }
+<meta charset="UTF-8">
+<title>Enactus DTU | Official Links</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="description" content="Official social media links for Enactus Delta Technological University">
 
-    body {
-      background: url('https://images.unsplash.com/photo-1638361336043-9273e90dc7bb?ixlib=rb-4.0.3&auto=format&fit=crop&w=1950&q=80') no-repeat center center/cover;
-      min-height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      padding: 40px 20px;
-    }
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
-    .container {
-      background-color: rgba(255, 255, 255, 0.95);
-      padding: 30px;
-      border-radius: 20px;
-      text-align: center;
-      max-width: 400px;
-      width: 100%;
-      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.2);
-    }
+<style>
+*{
+    margin:0;
+    padding:0;
+    box-sizing:border-box;
+    font-family: Arial, Helvetica, sans-serif;
+}
+body{
+    background:black;
+    color:white;
+    text-align:center;
+}
 
-    .profile-img {
-      width: 120px;
-      height: 120px;
-      border-radius: 50%;
-      object-fit: cover;
-      border: 4px solid #3498db;
-      margin-bottom: 15px;
-    }
+.container{
+    max-width:420px;
+    margin:auto;
+    padding:30px 15px;
+}
 
-    h1 {
-      font-size: 24px;
-      font-weight: 800;
-      margin-bottom: 8px;
-    }
+.logo{
+    width:160px;
+    margin:20px auto;
+    border-radius:12px;
+}
 
-    p {
-      font-size: 14px;
-      color: #555;
-      margin-bottom: 20px;
-    }
+h1{
+    font-size:28px;
+    margin-top:10px;
+}
 
-    .link {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      gap: 10px;
-      background-color: #3498db;
-      color: white;
-      text-decoration: none;
-      padding: 12px;
-      margin: 10px 0;
-      border-radius: 10px;
-      transition: background 0.3s;
-    }
+.bio{
+    color:#f5c400;
+    margin:10px 0 30px;
+    font-size:14px;
+}
 
-    .link:hover {
-      background-color: #2c80b4;
-    }
-  </style>
+.link-btn{
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    gap:10px;
+    background:white;
+    color:black;
+    text-decoration:none;
+    padding:14px;
+    border-radius:12px;
+    margin:12px 0;
+    font-weight:bold;
+    transition:0.3s;
+}
+
+.link-btn:hover{
+    transform:scale(1.03);
+    background:#f5c400;
+}
+</style>
 </head>
-<body>
-  <div class="container">
-    <img src="profile.jpg" alt="Abdelazim Gad" class="profile-img">
-    <h1>Abdelazim Gad</h1>
-    <p>Mechatronics Student | Robotics & Tech Enthusiast</p>
 
-    <a class="link" href="https://www.tiktok.com/@abdelazimgad2005?_t=ZS-8wnbYTQp7hY&_r=1" target="_blank"><i class="fab fa-tiktok"></i> TikTok</a>
-    
-    <a class="link" href="https://www.threads.net/@_eng_abdelazim_gad_" target="_blank">
-      <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/threads.svg" alt="Threads" style="width: 20px; height: 20px; margin-right: 8px; vertical-align: middle;">
-      Threads
+<body>
+<div class="container">
+
+    <img src="enactus.png" class="logo">
+
+    <h1>Enactus DTU</h1>
+    <p class="bio">
+        Delta Technological University<br>
+        Social Entrepreneurship • Innovation • Leadership
+    </p>
+
+    <a class="link-btn" href="https://www.facebook.com/share/19TVPDFXS1/">
+        <i class="fab fa-facebook"></i> Facebook
     </a>
-    
-    <a class="link" href="https://www.instagram.com/_eng_abdelazim_gad_?igsh=cDFscHNlNzJqa3Zm" target="_blank"><i class="fab fa-instagram"></i> Instagram</a>
-    <a class="link" href="https://www.facebook.com/share/1Ad3NZtJ81/" target="_blank"><i class="fab fa-facebook"></i> Facebook</a>
-    <a class="link" href="https://wa.me/201061208027" target="_blank"><i class="fab fa-whatsapp"></i> WhatsApp 1</a>
-    <a class="link" href="https://wa.me/201018337012" target="_blank"><i class="fab fa-whatsapp"></i> WhatsApp 2</a>
-    <a class="link" href="tel:01018337012" target="_blank"><i class="fas fa-phone"></i> Phone</a>
-  </div>
+
+    <a class="link-btn" href="https://www.instagram.com/enactusdtu">
+        <i class="fab fa-instagram"></i> Instagram
+    </a>
+
+    <a class="link-btn" href="https://www.linkedin.com/in/enactus-dtu-b4525238b">
+        <i class="fab fa-linkedin"></i> LinkedIn
+    </a>
+
+    <a class="link-btn" href="https://www.tiktok.com/@enactusdtu">
+        <i class="fab fa-tiktok"></i> TikTok
+    </a>
+
+    <a class="link-btn" href="https://wa.me/201103874266">
+        <i class="fab fa-whatsapp"></i> WhatsApp
+    </a>
+
+</div>
 </body>
 </html>
